--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Update favicon -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>File Management Software - Soochak Bharat</title>
+    <meta name="description" content="Soochak Bharat - File Management Software for Secure & Efficient Document Handling" />
+
+    <title>Soochak Bharat - File Management</title>
+
+    <!-- Optional: preload logo for faster loading -->
+    <link rel="preload" as="image" href="/logo.png" />
   </head>
-  <body>
+  <body class="bg-gray-50 text-gray-900">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
